Add initial bank operation

--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -42,7 +42,7 @@
 
                     <!--Operation-->
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/operations}"><span th:text="#{nav.actions}"></span></a>
+                        <a class="nav-link" th:href="@{/operation}"><span th:text="#{nav.actions}"></span></a>
                     </li>
                 </ul>
             </div>
