--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -32,7 +32,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/operations}">
+                        <a class="nav-link" th:href="@{/operation}">
                             <span th:text="#{nav.actions}"></span>
                         </a>
                     </li>
