--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -53,7 +53,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/operations}"><span th:text="#{nav.actions}"></span></a>
+                        <a class="nav-link" th:href="@{/operation}"><span th:text="#{nav.actions}"></span></a>
                     </li>
                 </ul>
             </div>
