--- a/src/main/resources/templates/operation/index.html
+++ b/src/main/resources/templates/operation/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title th:text="#{title.main.page}"></title>
+        <title th:text="#{title.operation}"></title>
         <link rel="icon" th:href="@{/assets/bank-icon.png}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/main.css}">
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body class="bg-blue">
+
+        <!--Header-->
         <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand scroll-top">
                 <img th:src="@{/assets/bank-icon.png}"
@@ -36,40 +38,39 @@
                     </li>
                 </ul>
             </div>
-            <div>
-                <a th:href="#{link.github}" target="_blank">
-                    <i class="fab fa-github"></i>
-                    <span>GitHub</span>
+            <!--Worker profile-->
+            <div class="nav-item dropdown text-secondary">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span th:text="${worker.passport.firstName + ' ' + worker.passport.lastName}"
+                          th:unless="${worker} == null"></span>
                 </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" th:href="@{'/worker/' + ${worker.id}}">
+                        <i class="fas fa-user-circle"></i>
+                        <span th:text="#{nav.profile}"></span>
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item text-danger" th:href="@{/worker/logOut}">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span th:text="#{btn.logout}"></span>
+                    </a>
+                </div>
             </div>
         </header>
+
+        <!--Container-->
         <div class="container-fluid">
             <div class="row row-center">
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
-                            <i class="fas fa-university avatar"></i>
-                            <h2 th:text="#{txt.card.greetings}"></h2>
+                            <i class="fas fa-money-check-alt avatar"></i>
+                            <h2 th:text="#{title.operation}"></h2>
                         </div>
                         <div class="rounded-container smooth-shadow">
                             <div class="user-info">
-                                <p class="bd-title" th:text="#{txt.card.greetings.body}"></p>
-                                <hr>
-                                <blockquote class="blockquote small">
-                                    <p class="mb-0" th:text="#{txt.blockquote}"></p>
-                                    <footer class="blockquote-footer" th:text="#{txt.blockquote.author}"></footer>
-                                </blockquote>
 
-                                <!--Next-->
-                                <div class="form-row">
-                                    <div class="form-group col-md-8"></div>
-                                    <div class="form-group col-md-4">
-                                        <a th:href="@{/worker/logIn}" role="button"
-                                           class="btn-custom btn btn-success float-right">
-                                            <span th:text="#{btn.login}"></span>
-                                        </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
