--- a/src/main/resources/templates/worker/logIn.html
+++ b/src/main/resources/templates/worker/logIn.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" th:href="@{/client}"><span th:text="#{nav.clients}"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/operation}"><span th:text="#{nav.actions}"></span></a>
+                        <a class="nav-link" th:href="@{/operation}"><span th:text="#{nav.operation}"></span></a>
                     </li>
                 </ul>
             </div>
