--- a/src/main/resources/templates/operation/index.html
+++ b/src/main/resources/templates/operation/index.html
@@ -33,7 +33,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/operation}">
-                            <span th:text="#{nav.actions}"></span>
+                            <span th:text="#{nav.operation}"></span>
                         </a>
                     </li>
                 </ul>
