--- a/src/main/resources/templates/worker/show.html
+++ b/src/main/resources/templates/worker/show.html
@@ -40,7 +40,7 @@
             </div>
 
             <!--Worker profile-->
-            <div class="nav-item dropdown text-secondary">
+            <div class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span th:text="${worker.passport.firstName + ' ' + worker.passport.lastName}"
