--- a/src/main/resources/templates/operation/index.html
+++ b/src/main/resources/templates/operation/index.html
@@ -23,21 +23,24 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active scroll-top">
-                        <a class="nav-link"><span th:text="#{nav.home}"></span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/}">
+                            <span th:text="#{nav.home}"></span>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/client}">
                             <span th:text="#{nav.clients}"></span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/operation}">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">
                             <span th:text="#{nav.operation}"></span>
                         </a>
                     </li>
                 </ul>
             </div>
+
             <!--Worker profile-->
             <div class="nav-item dropdown text-secondary">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -72,7 +75,7 @@
                             <div class="card-header">
                                 <ul class="nav nav-pills card-header-pills">
 
-                                    <!--General info-->
+                                    <!--Credit-->
                                     <li class="nav-item">
                                         <a id="btn-credit-tab" class="nav-link active" href="#"
                                            onclick="showCreditTab()">
@@ -80,7 +83,7 @@
                                         </a>
                                     </li>
 
-                                    <!--Personal info-->
+                                    <!--Deposit-->
                                     <li class="nav-item">
                                         <a id="btn-deposit-tab" class="nav-link" href="#"
                                            onclick="showDepositTab()">
@@ -90,7 +93,7 @@
                                 </ul>
                             </div>
 
-                            <!--General-info-->
+                            <!--Credit-tab-->
                             <div id="credit-tab" class="card-body card-info">
                                 <div class="user-info">
                                     <section>
@@ -102,14 +105,17 @@
                                 </div>
                             </div>
 
-                            <!--Personal-info-->
+                            <!--Deposit-tab-->
                             <div id="deposit-tab" class="card-body card-info" style="display: none">
                                 <div class="user-info">
                                     <section>
-                                        <h3>
-                                            <i class="fas fa-piggy-bank"></i>
-                                            <span th:text="#{operation.deposit}"></span>
-                                        </h3>
+<!--                                        <h3>-->
+<!--                                            <i class="fas fa-piggy-bank"></i>-->
+<!--                                            <span th:text="#{operation.deposit}"></span>-->
+<!--                                        </h3>-->
+                                        <a href=""></a>
+                                        <a href=""></a>
+                                        <a href=""></a>
                                     </section>
                                 </div>
                             </div>
