--- a/src/main/resources/templates/operation/index.html
+++ b/src/main/resources/templates/operation/index.html
@@ -113,9 +113,87 @@
 <!--                                            <i class="fas fa-piggy-bank"></i>-->
 <!--                                            <span th:text="#{operation.deposit}"></span>-->
 <!--                                        </h3>-->
-                                        <a href=""></a>
-                                        <a href=""></a>
-                                        <a href=""></a>
+
+
+                                        <!-- Modal delete account-->
+<!--                                        <div class="modal fade" id="delete-account-modal" tabindex="-1"-->
+<!--                                             role="dialog"-->
+<!--                                             aria-labelledby="deleteClientModalLabel" aria-hidden="true">-->
+<!--                                            <div class="modal-dialog" role="document">-->
+<!--                                                <div class="modal-content">-->
+<!--                                                    <div class="modal-header">-->
+<!--                                                        <h5 class="modal-title text-danger"-->
+<!--                                                            id="deleteAccountModalLabel">-->
+<!--                                                            <i class="fas fa-trash-alt"></i>-->
+<!--                                                            <span th:text="#{title.account.delete}"></span>-->
+<!--                                                        </h5>-->
+<!--                                                        <button type="button" class="close" data-dismiss="modal"-->
+<!--                                                                aria-label="Close">-->
+<!--                                                            <span aria-hidden="true">&times;</span>-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="modal-body">-->
+<!--                                                        <span th:text="#{txt.warning.delete.account}"></span>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="modal-footer">-->
+<!--                                                        <button type="button" class="btn btn-primary"-->
+<!--                                                                data-dismiss="modal">-->
+<!--                                                            <span th:text="#{btn.cancel}"></span>-->
+<!--                                                        </button>-->
+<!--                                                        <button type="button" class="btn btn-outline-danger"-->
+<!--                                                                th:onclick="'deleteAccount(' + ${account.id} + ')'">-->
+<!--                                                            <span th:text="#{btn.delete}"></span>-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+
+
+                                        <!-- Modal create account-->
+<!--                                        <div class="modal fade" id="create-account-modal" tabindex="-1"-->
+<!--                                             role="dialog"-->
+<!--                                             aria-labelledby="deleteClientModalLabel" aria-hidden="true">-->
+<!--                                            <div class="modal-dialog" role="document">-->
+<!--                                                <div class="modal-content">-->
+<!--                                                    <div class="modal-header">-->
+<!--                                                        <h5 class="modal-title text-success"-->
+<!--                                                            id="createAccountModalLabel">-->
+<!--                                                            <i class="fas fa-money-check-alt"></i>-->
+<!--                                                            <span th:text="#{title.account.create}"></span>-->
+<!--                                                        </h5>-->
+<!--                                                        <button type="button" class="close" data-dismiss="modal"-->
+<!--                                                                aria-label="Close">-->
+<!--                                                            <span aria-hidden="true">&times;</span>-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="modal-body">-->
+<!--                                                        <div class="form-row">-->
+<!--                                                            <div class="form-group col-md-12">-->
+<!--                                                                <label for="select-currency"-->
+<!--                                                                       th:text="#{label.select.currency} + ':'"></label>-->
+<!--                                                                <select id="select-currency" class="form-control">-->
+<!--                                                                    <th:block th:each="currency : ${currencies}">-->
+<!--                                                                        <option th:value="${currency.id}"-->
+<!--                                                                                th:text="${currency.name}"></option>-->
+<!--                                                                    </th:block>-->
+<!--                                                                </select>-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
+<!--                                                    <div class="modal-footer">-->
+<!--                                                        <button type="button" class="btn btn-primary"-->
+<!--                                                                data-dismiss="modal">-->
+<!--                                                            <span th:text="#{btn.cancel}"></span>-->
+<!--                                                        </button>-->
+<!--                                                        <button type="button" class="btn btn-success"-->
+<!--                                                                th:onclick="'saveAccount(' + ${client.id} + ')'">-->
+<!--                                                            <span th:text="#{btn.save}"></span>-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
                                     </section>
                                 </div>
                             </div>
